--- a/config-client-app.properties
+++ b/config-client-app.properties
@@ -1,3 +1,3 @@
-some.property=app specific overridden value
+some.property=app specific overridden value default
 some.connectionstring= my conection
 some.urlsecret=my url secret
